# orange-assembler

./: Cargo.toml  eprom.asm  monitor.asm  source.asm  test-program.asm
src/: inst.rs  lib.rs  main.rs  prog.rs  test.rs
