[package]
name = "orange_assembler"
version = "0.1.0"
authors = ["willthamic <will.hamic@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enum-map = "0.6.2"
strum = "0.17.1"
strum_macros = "0.17.1"
simple-error = "0.2.1"